--- a/README.Rmd
+++ b/README.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(
 
 # dagir - Danmarks Administrative Geografiske Inddeling i R
 
-[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/dagirlite)](https://cran.r-project.org/package=dagirlite)
+[![CRAN_Status_Badge](https://www.r-pkg.org/badges/version/dagirlite)](https://cran.r-project.org/package=dagirlite)
 
 Hovedfunktionen for dagir er at stille tilgængeligt komprimerede geospatielle datasæt fra DAGI som er sammenkoblet med data fra Danmarks Statistik. Dette er for de 9 områder som er tilgængeligt gennem DAGI's API fra [DAWA - Danmarks Adressers Web API](https://dawadocs.dataforsyningen.dk/).
 
